# inkess-code

./: package-lock.json  package.json
helper/: Cargo.toml
helper/src/: client_verify.rs  dns.rs  ipc.rs  main.rs  rpc.rs  singbox.rs  state.rs  watchdog.rs
resources/: com.inkess.code.helper.plist  preview.html
src/main/: index.ts
src/main/browser/: browser-interceptor.ts  browser-window.ts
src/main/chat/: chat-ipc.ts  chat-manager.ts  chat-store.ts  chat-types.ts
src/main/chat/engines/: claude.ts  codex.ts  index.ts  types.ts
src/main/cli/: cli-manager.ts  engine-registry.ts
src/main/proxy/: helper-client.ts  helper-installer.ts  sing-box-manager.ts
src/main/pty/: pty-output-monitor.ts
src/preload/: index.ts
src/renderer/: TerminalApp.tsx  index.html
src/renderer/auth/: session-cleanup.ts
src/renderer/i18n/: en.ts  zh.ts
src/renderer/stores/: chat.ts  settings.ts
src/renderer/views/chat/: ChatApp.tsx  ChatDrawer.tsx
src/renderer/views/chat/sidebar/: ChatListItem.tsx  ChatSidebar.tsx
src/renderer/views/settings/: SettingsPanel.tsx
src/renderer/views/setup/: SetupScreen.tsx
src/renderer/views/subscription/: LoginPage.tsx
src/renderer/views/tun/: TunGate.tsx
tests/unit/: auth-session-cleanup.test.ts  chat-drawer.test.ts  chat-ipc.test.ts  chat-isolation.test.ts  chat-store.test.ts
